Adicionadas novas documentacoes endpoint get users
